overflow issue

--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@
     background-blend-mode: overlay;
     background-size: cover;
     position: absolute;
+    top: 0vh;
     /* transform: translateX(100vw); */
 }
 /* .parent-container > .container:nth-child(1){transform: translateY(0px);}
